fixed webkit mobile layout bug site does not correctly scale when resized still, but how to fix that is beyond me.

--- a/assets/style/amber-mobile.css
+++ b/assets/style/amber-mobile.css
@@ -27,5 +27,5 @@ body {
 .icon {
 	margin: auto;
 	display: block;
-	max-height: 100%;
+	max-height: 350px;
 }
